lib/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__force_single_line_force_single_line.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 19
    column: 0
  fix:
    content:
      - import math
      - import sys
      - "from logging.handlers import FileHandler, StreamHandler"
      - "from os import path, uname"
      - ""
      - "# comment 5"
      - "from bar import a  # comment 6"
      - "from bar import b  # comment 7"
      - "from foo import bar  # comment 3"
      - "from foo2 import bar2  # comment 4"
      - ""
      - "# comment 1"
      - "# comment 2"
      - from third_party import lib1
      - from third_party import lib2
      - from third_party import lib3
      - from third_party import lib4
      - from third_party import lib5
      - from third_party import lib6
      - from third_party import lib7
      - ""
    location:
      row: 1
      column: 0
    end_location:
      row: 19
      column: 0
  parent: ~

