lib/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__reorder_within_section.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 0
  fix:
    content:
      - import os
      - import sys
      - ""
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 0
  parent: ~

